cluster/apps/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
  labels:
    app.kubernetes.io/name: kavita
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
    spec:
      containers:
        - name: kavita
          image: ghcr.io/kareadita/kavita:latest
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /kavita/config
            - name: manga
              mountPath: /manga
            - name: books
              mountPath: /books
            - name: comics
              mountPath: /comics
              
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: manga
          persistentVolumeClaim:
            claimName: kavita-manga
        - name: books
          persistentVolumeClaim:
            claimName: kavita-books
        - name: comics
          persistentVolumeClaim:
            claimName: kavita-comics
