cluster/apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  labels:
    app.kubernetes.io/name: kavita
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kavita
