cluster/apps/kavita/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
  namespace: media
  labels:
    app.kubernetes.io/name: kavita
  annotations:
    gethomepage.dev/description: Manga, Books, and Comics Server
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sh-kavita
    gethomepage.dev/name: Kavita
    gethomepage.dev/pod-selector: app.kubernetes.io/name=kavita
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - kavita.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kavita
          port: 5000
          weight: 1
